--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
       const API_KEY = (typeof process !== 'undefined' && process.env && process.env.API_KEY) ? process.env.API_KEY : '';
 
       // *** IMPORTANT: PASTE YOUR GOOGLE SCRIPT WEB APP URL HERE ***
-      const GOOGLE_SCRIPT_URL = "https://script.google.com/macros/s/AKfycby-6wnErQdXkovY2uavK9WcxEHH4nq8LQCsLgYY5WyR6Kaj-BPV_-UZ8_gZ0LBOmiLLKQ/exec"; 
+      const GOOGLE_SCRIPT_URL = https://script.google.com/macros/s/AKfycby-6wnErQdXkovY2uavK9WcxEHH4nq8LQCsLgYY5WyR6Kaj-BPV_-UZ8_gZ0LBOmiLLKQ/exec; 
 
       // --- TYPES ---
       
